--- a/main.html
+++ b/main.html
@@ -8,6 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 </header>
+    <nav>
+        <a href="#nav-actor">Actors</a>
+        <a href="#nav-quote">Quotes</a>
+    </nav>
+    <summary>
+        A brief summary of the plot goes here.
+    </summary>
+    <section id="actor">
+        <h2>Actors</h2>
+        <p>Details about the actors in the movie.</p>
+    </section>
+    <section id="quote">
+        <h2>Quotes</h2>
+        <p>Your favorite quote from the movie.</p>
+    </section>
+    <aside>
+        <h2>IMDb Rating and Release Date</h2>
+        <p>IMDb Rating: 8.5</p>
+        <p>Release Date: January 1, 2023</p>
+    </aside>
+    <footer>
+        Produced by: Producer's Name
+    </footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
